name:           hssofthsm
version:        0.1
synopsis:       Software HSM implementation with PKCS#11 interface
homepage:       https://github.com/denisenkom/hssofthsm
license:        MIT
license-file:   LICENSE
author:         Mikhail Denisenko
maintainer:     denisenkom@gmail.com
category:       Cryptography
build-type:     Simple
cabal-version:  >=1.10
extra-source-files: include/*.h

library
    build-tools:    c2hs
    Include-dirs: include
    c-sources: export.c
    build-depends:
        base,
        hashable,
        cryptohash,
        bytestring
    exposed-modules:
        System.Crypto.SoftHsm
    Default-language:  Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    build-tools:   c2hs
    main-is:            Test.hs
    Include-dirs: include
    build-depends:
        base
    default-language:   Haskell2010
